[package]
name = "prometheus"
version = "0.1.0"
authors = ["Eric Caleb <caleberic@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.8", features = ["nightly"] }
rocket = "0.4.5"
tokio = { version = "0.2", features = ["macros"] }
lazy_static = "1.4.0"