[package]
name = "rq"
version = "0.1.0"
authors = ["Eric Caleb <eric.caleb@container-solutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = { version = "0.12.0" }
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"