[package]
name = "warp"
version = "0.1.0"
authors = ["Eric Caleb <caleberic@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
warp = "0.2"
pretty_env_logger = "0.4.0"

